--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^17.0.2",
     "react-full-screen": "^1.0.2",
     "react-scripts": "4.0.3",
+    "react-spring": "^9.0.0-rc.3",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
